--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 <div id="gallery_wrap" class="desktop">
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner" style="height: calc(100vh - 93px);">
-            <div class="carousel-item active view overlay">
+            <div class="carousel-item active view">
                 <a href="https://www.mayoclinic.org/">
                     <img class="img-fluid" src="images/Mayo.jpg"/>
                     <div class="myoverlay">Mayo Clinic</div>
@@ -165,7 +165,7 @@
             <!--document.write(document.lastModified);-->
         <!--</script>-->
     <!--</div>-->
-    <div class="col-md-6" style="margin: auto">
+    <div class="col-md-9" style="margin: auto">
         <b>Lixia Yao, PhD</b>
         <span class="myblock">Assistant Professor |</span>
         <span class="myblock">Department of Health Sciences Research |</span>
