--- a/people.html
+++ b/people.html
@@ -1,14 +1,14 @@
 
     <div class="row section" id="pm">
         <div class="col-lg-12">
-           <h3>Principle Investigator:</h3>
+            <h3><strong>Principle Investigator:</strong></h3>
         </div>
     </div>
     <div class="row para last">
-        <div class="col-md-4 col-xs-6 mugshot">
+        <div class="col-lg-4 col-md-12 mugshot">
             <img src="images/lixia-yao.png" alt="Lixia Yao - Mayo Clinic"/>
         </div>
-        <div class="col-md-8 col-xs-12">
+        <div class="col-lg-8 col-md-12">
             <strong>Lixia Yao</strong>, Ph.D.<br>
             Assistant Professor<br>
             Email: Yao.Lixia At Mayo DoT edu<br>
@@ -27,14 +27,14 @@
     </div>
 	<div class="row section" id="cm">
         <div class="col-lg-12">
-           <h3>Current Members:</h3>
+            <h3><strong>Current Members:</strong></h3>
         </div>
     </div>
     <div class="row para">
-        <div class="col-md-4 col-xs-6 mugshot">
+        <div class="col-lg-4 col-md-12 mugshot">
             <img src="images/erin.png" alt="Erin Martin - Mayo Clinic"/>
         </div>
-        <div class="col-md-8 col-xs-12">
+        <div class="col-lg-8 col-md-12">
             <strong>Erin Martin</strong><br />
             Administrative Assistant<br>
             Email: Martin.Erin At Mayo DoT edu<br>
@@ -42,10 +42,10 @@
         </div>
     </div>
     <div class="row para">
-        <div class="col-md-4 col-xs-6 mugshot">
+        <div class="col-lg-4 col-md-12 mugshot">
             <img src="images/Huang_Ming_17O.JPG"  alt="Ming Huang" />
         </div>
-        <div class="col-md-8 col-xs-12">
+        <div class="col-lg-8 col-md-12">
             <strong>Ming Huang</strong>, Ph. D.<br />
             Research Associate<br />
             Email: Huang.Ming At Mayo DoT edu<br />
@@ -65,10 +65,10 @@
         </div>
     </div>
     <div class="row para">
-        <div class="col-md-4 col-xs-6 mugshot">
+        <div class="col-lg-4 col-md-12 mugshot">
             <img src="images/Zolnoori_Maryam_18M.JPG"  alt="Maryam Zolnoori - Mayo Clinic"/>
         </div>
-        <div class="col-md-8 col-xs-12">
+        <div class="col-lg-8 col-md-12">
             <strong>Maryam Zolnoori</strong>, Ph. D.<br />
             Research Fellow<br />
             Email: Zolnoori.Maryam At Mayo DoT edu<br />
@@ -86,10 +86,10 @@
         </div>
     </div>
     <div class="row para">
-        <div class="col-md-4 col-xs-6 mugshot">
+        <div class="col-lg-4 col-md-12 mugshot">
             <img src="images/Yue_Xiaomeng_18MY.JPG"  alt="Xiaomeng Yue" />
         </div>
-        <div class="col-md-8 col-xs-12">
+        <div class="col-lg-8 col-md-12">
             <strong>Xiaomeng (Emma) Yue</strong><br />
             Intern<br />
             Email: Yue.Xiaomeng At Mayo DoT edu<br />
@@ -107,10 +107,10 @@
         </div>
     </div>
     <div class="row para">
-        <div class="col-md-4 col-xs-6 mugshot">
+        <div class="col-lg-4 col-md-12 mugshot">
             <img src="images/Hu_Yueqi_18MY.JPG"  alt="Yueqi Hu" />
         </div>
-        <div class="col-md-8 col-xs-12">
+        <div class="col-lg-8 col-md-12">
             <strong>Yueqi Hu</strong><br />
             Intern<br />
             Email: Hu.yueqi At Mayo DoT edu<br />
@@ -130,10 +130,10 @@
         </div>
     </div>
     <div class="row para last">
-        <div class="col-md-4 col-xs-6 mugshot">
+        <div class="col-lg-4 col-md-12 mugshot">
             <img src="images/Tabish_Syeda_M_18MY.JPG"  alt="Syeda Momina Tabish" />
         </div>
-        <div class="col-md-8 col-xs-12">
+        <div class="col-lg-8 col-md-12">
             <strong>Syeda Momina Tabish</strong><br />
             Intern<br />
             Email: Tabish.Syeda At Mayo DoT edu<br />
@@ -154,7 +154,7 @@
     </div>
     <div class="row section" id="alu">
         <div class="col-lg-12">
-            <h3>Alumni:</h3>
+            <h3><strong>Alumni:</strong></h3>
         </div>
     </div>
     <div class="row">
