--- a/publication.html
+++ b/publication.html
@@ -1,7 +1,7 @@
 <div class="inside">
     <!--<h1>Publications</h1>-->
-
-    <h3 id="Journal">Peer Reviewed Articles - Journal:</h3>
+    </h3>
+    <h3 id="Journal"><strong>Peer Reviewed Articles - Journal:</strong></h3>
     <ol>
       <li>MfeCNN: Mixture Feature Embedding Convolutional Neural Network for Data Mapping. Li D, Huang M, Li X, Ruan Y, <strong>Yao L</strong>. (early access, IEEE transaction on NanoBioSciences) (2018)</li>
       <li>A feasibility study on identifying drinking-related contents in Facebook through mining heterogeneous data. ElTayeby O, Eaglin T, Abdullah M, Burlinson D, Dou W, <strong>Yao L*</strong>. (accepted by  the Health Informatics Journal) </li>
@@ -22,7 +22,9 @@
         <li>Internet resources for proteins associated with drug therapeutic effects, adverse reactions, and ADME. Ji Z, Sun L, Chen X, Zheng C, <strong>Yao L</strong>, Han L, Cao Z, Wang J, Yeo WK, Cai C, and Chen Y. Drug Discovery Today, 8(12): 526-529. (2003)</li>
         <li>KDBI: kinetic data of bio-molecular interactions database. Ji Z, Chen X, Zheng C, <strong>Yao L</strong>, Han L, Yeo WK, Chung P, Puy H, Tay YT, Muhammad A, and Chen Y. Nucleic Acids Research, 31(1): 255-257. (2003)</li>
     </ol>
-    <h3 id="conference">Peer Reviewed Articles - Conference:</h3>
+    <h3 id="conference">
+        <strong>Peer Reviewed Articles - Conference:</strong>
+    </h3>
     <ol>
       <li>&nbsp;A Publication-based Popularity Index for Healthcare Dataset Ranking. Shi J, Zheng M, <strong>Yao L</strong>, Ge Y. The Sixth IEEE International Conference on Healthcare Informatics (ICHI), New York, NY, (2018)</li>
         <li>Terminology Enabled Spatio-Temporal Analysis and Visualization for Preterm Birth Data in the US. Wang K, <strong>Yao L</strong>. The 11<sup>th</sup> International Conference on Health Informatics (HEALTHINF), Funchal, Madeira, Portugal (2018)</li>
