--- a/people.html
+++ b/people.html
@@ -60,7 +60,7 @@
                 </p>
             </div>
             <p><strong>Degree:</strong> Ph.D. in Scientific Computation, University
-                of Minnesota-Twin Cities(2014)
+                of Minnesota-Twin Cities (2014)
             </p>
         </div>
     </div>
@@ -276,7 +276,7 @@
                     2012
                 </td>
                 <td>
-                    <em>IBM Watson Research Center</em>
+                    IBM Watson Research Center
                 </td>
             </tr>
             <tr>
@@ -287,7 +287,7 @@
                     2011
                 </td>
                 <td>
-                    <em>IBM Watson Research Center</em>
+                    IBM Watson Research Center
                 </td>
             </tr>
             <tr>
