--- a/resources.html
+++ b/resources.html
@@ -1,7 +1,7 @@
 <div class="inside">
   <ol>
     <li>
-      <h3>Health Research Opportunity Index (ROI)</h3>
+      <h3><strong>Health Research Opportunity Index (ROI)</strong></h3>
       <p><a href="page.html?p=ROI">[The Project's Page]</a></p>
       <p>We included US patents data into the calculation of Health Research Opportunity Index (ROI) and updated Health Research Opportunity Indices (ROI) by adding data from more recent years (2012-2017). Please check it out! (07/07/2018)</p>
    	  <p>Since our work on Health Research Opportunity Index (ROI) was published on Nature Biotechnology in August 2015, we have received overwhelming feedback, including many requests for data from both academia and industry. Therefore we created this site to illustrate Health Research Opportunity Indices (ROI) during 2000-2011 using an interactive visualization tool. We are still working on improving our model and will post future updates on this site.  (10/11/2015)</p>
