update people information

--- a/people.html
+++ b/people.html
@@ -79,10 +79,10 @@
             </a>
             <div class="collapse" id="Maryambio">
                 <p>
-                   XXXX
+                    Dr. Maryam Zolnoori received her Ph.D. degree in Health Informatics from the University of Wisconsin-Milwaukee in 2017, and her first master in Biomedical Informatics from the University of Indiana in 2014, and her second master in Information Technology from the of Tarbiat Modares University, Tehran, Iran. Dr. Zolnoori’s long-term research goal focuses on integrating and mining data sources from electronic health records, consumer health posts, and biomedical literature for improving medications non-adherence, pharmacovigilance, and mental healthcare. She is also interested in developing interventions to support and promote patients’ engagement and patient-centered care. As a pre-doctoral training at the National Library of Medicine (NLM) (2016-2017), she focused on utilizing consumer health posts for medications non-adherence in patients with depression. In 2018, she joined Mayo Clinic as a Research Fellow with Dr. Yao in the Division of Biomedical Statistics and Informatics, Department of health Sciences research.
                 </p>
             </div>
-            <p><strong>Degree:</strong> Ph.D. in XXXX (2017)</p>
+            <p><strong>Degree:</strong> Ph.D. in Health Informatics, University of Wisconsin-Milwaukee (2017)</p>
         </div>
     </div>
     <div class="row para">
@@ -100,10 +100,11 @@
             </a>
             <div class="collapse" id="xiaomengbio">
                 <p>
-                    XXXX
+                    Xiaomeng Yue is a PhD student in the James L. Winkle College of Pharmacy at University of Cincinnati. She received a MS in Pharmaceutical Sciences from University of Cincinnati. She has published three textbook chapters in pharmacoeconomics, over than 11 peer-reviewed research papers. Her research interests include national and international health policy issues, drug utilization review, drug price, health insurance policy, drug safety surveillance, as well as health outcomes research. She built up her expertise and experience with health database analysis using large real-world health survey, medical claim data, and electronic health record.
+                    She is serving as president of UC International Society for Pharmacoeconomics and Outcomes Research Student Chapter and International Society for Pharmacoepidemiology student chapter. She has been working collaboratively with Cincinnati Children’s Hospital and worked at Pfizer.
                 </p>
             </div>
-            <p><strong>Degree:</strong> [tbs]</p>
+            <p><strong>Degree:</strong> MS in Pharmaceutical Sciences, University of Cincinnati (2017) </p>
         </div>
     </div>
     <div class="row para">
