--- a/people.html
+++ b/people.html
@@ -66,7 +66,8 @@
     </div>
     <div class="row para">
         <div class="col-lg-4 col-md-12 mugshot">
-            <img src="images/Zolnoori_Maryam_18M.JPG"  alt="Maryam Zolnoori - Mayo Clinic"/>
+            <!--<img src="images/Zolnoori_Maryam_18M.JPG"  alt="Maryam Zolnoori - Mayo Clinic"/>-->
+            <img src="images/placeholder.jpg"  alt="Maryam Zolnoori - Mayo Clinic"/>-->
         </div>
         <div class="col-lg-8 col-md-12">
             <strong>Maryam Zolnoori</strong>, Ph. D.<br />
